loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:3: error: '<-' expected but ')' found.
for (i -> 1 to 8){
                ^LoopStairs:12: error: illegal start of simple expression
	}
        ^